--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Event Management And Production</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="images/logo.jpeg">
-</head>
+    <style type="text/css">
+        body{
+    margin: 0;
+    padding: 0;
+    background-image: url('images/under-maintianance.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+    background-attachment: fixed;
 
-<body style="background-image: url('images/under-maintianance.jpg');">
-    
+}
+    </style>
+</head>
+<body>
 </body>
 </html>
