--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								</div><!-- End / service -->
 								<!-- service -->
 								<div class="service">
-									<h2 class="service__title">Educational Events</h2>
+									<h2 class="service__title">Corporate Events</h2>
 									<p class="service__text">We take care of Sports Management,corporate events, Special events Management and Brand Promotions. We have a team of experienced professionals. </p>
 									<h2 class="service__title">Weddings</h2>
 									<p class="service__text">Gigsnap is also specialized in planning Destination wedding management services. It is most couple’s desire to adventure off to an exotic location somewhere to have their dream wedding. </p>
