--- a/index.html
+++ b/index.html
@@ -278,12 +278,12 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
 
-          <!--King-->
-         <div class="swiper-slide" style="background-image: url(assets/images/6.jpg);"><div class="number" style="text-decoration: none;"><a href="http://192.168.0.177/gigsnap/img2/video/king.mp4" style="text-decoration: none;color: white"><div id="K" style="text-decoration: none;">King</br><span style="font-size: 15px;margin-left: 39px;font-family: Segoe Script;text-decoration: none;">The last ride</span></div></div></a></div>
+            <!--King-->
+            <div class="swiper-slide" style="background-image: url(assets/images/6.jpg);"><div class="number" style="text-decoration: none;"><a href="http://192.168.0.177/gigsnap/img2/video/king.mp4" style="text-decoration: none;color: white"><div id="K" style="text-decoration: none;">King</br><span style="font-size: 15px;margin-left: 39px;font-family: Segoe Script;text-decoration: none;">The last ride</span></div></div></a></div>
 
             <!--Vilen-->
-            <div class="swiper-slide" style="background-image: url(assets/images/vilen.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/v!len.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 104px;">Vilen<br><span style="font-size: 14px;margin-left: 34px;font-family: Segoe Script";>The Dark Family</span></div></div></a>
-          </div>
+            <div class="swiper-slide" style="background-image: url(assets/images/vilen.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/v!len.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 104px;">Vilen<br><span style="font-size: 14px;margin-left: 34px;font-family: Segoe Script";>The Dark Family</span></div></div></a></div>
+
             <!--Parmish-->
           <div class="swiper-slide" style="background-image: url(assets/images/parmish.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/parmish.mp4" style="text-decoration: none;color: white"><div id="K" style="font-size: 22px;">Parmish<br>Varma<br><span style="font-size: 14px;margin-left: 10px;font-family: Segoe Script";>~ Sparta</span></div></div></a></div>
 
@@ -314,7 +314,6 @@
           <!--Paradox-->
           <div class="swiper-slide" style="background-image: url(assets/images/para.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/paradox.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 150px;font-size: 28px">Paradox<br><span style="font-size: 14px;margin-left: -90px;font-family: Segoe Script";>Fomo</span></div></div></a></div>
         </div>
-
     </div>
 <div class="container">
             <div class="hero__wrapper">
