--- a/index.html
+++ b/index.html
@@ -279,40 +279,40 @@
         <div class="swiper-wrapper">
 
             <!--King-->
-            <div class="swiper-slide" style="background-image: url(assets/images/6.jpg);"><div class="number" style="text-decoration: none;"><a href="http://192.168.0.177/gigsnap/img2/video/king.mp4" style="text-decoration: none;color: white"><div id="K" style="text-decoration: none;">King</br><span style="font-size: 15px;margin-left: 39px;font-family: Segoe Script;text-decoration: none;">The last ride</span></div></div></a></div>
+            <div class="swiper-slide" style="background-image: url(assets/images/6.jpg);"><div class="number" style="text-decoration: none;"><a href="https://gigsnap.in/assets/video/king.mp4" style="text-decoration: none;color: white"><div id="K" style="text-decoration: none;">King</br><span style="font-size: 15px;margin-left: 39px;font-family: Segoe Script;text-decoration: none;">The last ride</span></div></div></a></div>
 
             <!--Vilen-->
-            <div class="swiper-slide" style="background-image: url(assets/images/vilen.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/v!len.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 104px;">Vilen<br><span style="font-size: 14px;margin-left: 34px;font-family: Segoe Script";>The Dark Family</span></div></div></a></div>
+            <div class="swiper-slide" style="background-image: url(assets/images/vilen.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/v!len.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 104px;">Vilen<br><span style="font-size: 14px;margin-left: 34px;font-family: Segoe Script";>The Dark Family</span></div></div></a></div>
 
             <!--Parmish-->
-          <div class="swiper-slide" style="background-image: url(assets/images/parmish.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/parmish.mp4" style="text-decoration: none;color: white"><div id="K" style="font-size: 22px;">Parmish<br>Varma<br><span style="font-size: 14px;margin-left: 10px;font-family: Segoe Script";>~ Sparta</span></div></div></a></div>
+          <div class="swiper-slide" style="background-image: url(assets/images/parmish.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/parmish.mp4" style="text-decoration: none;color: white"><div id="K" style="font-size: 22px;">Parmish<br>Varma<br><span style="font-size: 14px;margin-left: 10px;font-family: Segoe Script";>~ Sparta</span></div></div></a></div>
 
 <!--Kaka-->
-          <div class="swiper-slide" style="background-image: url(assets/images/kaka.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/kaka.mp4" style="text-decoration: none;color: white"><div id="K">Kaka<br><span style="font-size: 14px;margin-left: 45px;font-family: Segoe Script";>~ Waris Shah</span></div></div></a></div>
+          <div class="swiper-slide" style="background-image: url(assets/images/kaka.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/kaka.mp4" style="text-decoration: none;color: white"><div id="K">Kaka<br><span style="font-size: 14px;margin-left: 45px;font-family: Segoe Script";>~ Waris Shah</span></div></div></a></div>
 
             <!--Mask box-->
-            <div class="swiper-slide" style="background-image: url(assets/images/7.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/mask-box.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 120px;font-size: 22px">Mask Box<br><span style="font-size: 11px;margin-left: 13px;font-family: Segoe Script";>Some Fire at Waters.</span></div></div></a></div>
+            <div class="swiper-slide" style="background-image: url(assets/images/7.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/mask-box.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 120px;font-size: 22px">Mask Box<br><span style="font-size: 11px;margin-left: 13px;font-family: Segoe Script";>Some Fire at Waters.</span></div></div></a></div>
 
             <!--vivek
             <div class="swiper-slide" style="background-image: url(assets/images/vivek.jpg);"><div class="number"><div id="K" style="margin-left: 131px;font-size: 22px">Vivek Singh<br><span style="font-size: 15px;margin-left: -45px;font-family: Segoe Script";>Parinda</span></div></div></div></a>-->
 
             <!--DJ-->
-            <div class="swiper-slide" style="background-image: url(assets/images/Terimiko.jpg);"><div class="number" ><a href="http://192.168.0.177/gigsnap/img2/video/Dj.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 138px;font-size: 20px">DJ Terimiko<br><span style="font-size: 12px;margin-left: -45px;font-family: Segoe Script";>Dark-Sider</span></div></div></a></div>
+            <div class="swiper-slide" style="background-image: url(assets/images/Terimiko.jpg);"><div class="number" ><a href="https://gigsnap.in/assets/video/Dj.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 138px;font-size: 20px">DJ Terimiko<br><span style="font-size: 12px;margin-left: -45px;font-family: Segoe Script";>Dark-Sider</span></div></div></a></div>
 
             <!--Sanam band-->
-           <div class="swiper-slide" style="background-image: url(assets/images/sanam.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/sanam.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 138px;font-size: 20px">Sanam Band<br><span style="font-size: 12px;margin-left: -90px;font-family: Segoe Script";>Drums</span></div></div></a></div>
+           <div class="swiper-slide" style="background-image: url(assets/images/sanam.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/sanam.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 138px;font-size: 20px">Sanam Band<br><span style="font-size: 12px;margin-left: -90px;font-family: Segoe Script";>Drums</span></div></div></a></div>
 
             <!--Krsna-->
-           <div class="swiper-slide" style="background-image: url(assets/images/8.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/krsna.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 100px;font-size: 28px">Kr$na<br><span style="font-size: 11px;margin-left: -30px;font-family: Segoe Script";>Dollar $</span></div></div></a></div>
+           <div class="swiper-slide" style="background-image: url(assets/images/8.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/krsna.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 100px;font-size: 28px">Kr$na<br><span style="font-size: 11px;margin-left: -30px;font-family: Segoe Script";>Dollar $</span></div></div></a></div>
 
             <!--Akhil-->
           <div class="swiper-slide" style="background-image: url(assets/images/5.jpg);"><div class="number"><div id="K" style="margin-left: 100px;font-size: 28px">Akhil<br><span style="font-size: 11px;margin-left: -30px;font-family: Segoe Script";>Soulfull</span></div></div></div>
 
           <!--Amit-->
-          <div class="swiper-slide" style="background-image: url(assets/images/amit.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/amit.mp4" style="text-decoration: none;color: white"><div id="K" style="font-size:20px">AMit<br>Trivedi<br><span style="font-size: 14px;margin-left: 4px;font-family: Segoe Script";>~ SOT</span></div></div></a></div>
+          <div class="swiper-slide" style="background-image: url(assets/images/amit.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/amit.mp4" style="text-decoration: none;color: white"><div id="K" style="font-size:20px">AMit<br>Trivedi<br><span style="font-size: 14px;margin-left: 4px;font-family: Segoe Script";>~ SOT</span></div></div></a></div>
 
           <!--Paradox-->
-          <div class="swiper-slide" style="background-image: url(assets/images/para.jpg);"><div class="number"><a href="http://192.168.0.177/gigsnap/img2/video/paradox.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 150px;font-size: 28px">Paradox<br><span style="font-size: 14px;margin-left: -90px;font-family: Segoe Script";>Fomo</span></div></div></a></div>
+          <div class="swiper-slide" style="background-image: url(assets/images/para.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/paradox.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 150px;font-size: 28px">Paradox<br><span style="font-size: 14px;margin-left: -90px;font-family: Segoe Script";>Fomo</span></div></div></a></div>
         </div>
     </div>
 <div class="container">
@@ -363,7 +363,7 @@
    </div>
 </div><br><span style="font-family: sans-serif;text-shadow: 0px 0px 4px black">Gigsnap was founded in 2020 at Bhopal and we have successfully executed more than 50+ events till date in India, We are a professional Event Management Company specialized in providing one stop solutions to all your event management needs.</span></p>
   </div>
-</div>  <small>© 2020-2024 Design by <a href="https://crackthehack.in" target="_blank">Gigsnap</a></small></div>
+</div>  <small>© 2020-2024 Design by <a href="https://gigsnap.in" target="_blank">Gigsnap</a></small></div>
 
             </div>
           </div>
