--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <!--Parmish-->
           <div class="swiper-slide" style="background-image: url(assets/images/parmish.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/parmish.mp4" style="text-decoration: none;color: white"><div id="K" style="font-size: 22px;">Parmish<br>Varma<br><span style="font-size: 14px;margin-left: 10px;font-family: Segoe Script";>~ Sparta</span></div></div></a></div>
 
-<!--Kaka-->
+          <!--Kaka-->
           <div class="swiper-slide" style="background-image: url(assets/images/kaka.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/kaka.mp4" style="text-decoration: none;color: white"><div id="K">Kaka<br><span style="font-size: 14px;margin-left: 45px;font-family: Segoe Script";>~ Waris Shah</span></div></div></a></div>
 
             <!--Mask box-->
@@ -306,7 +306,7 @@
            <div class="swiper-slide" style="background-image: url(assets/images/8.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/krsna.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 100px;font-size: 28px">Kr$na<br><span style="font-size: 11px;margin-left: -30px;font-family: Segoe Script";>Dollar $</span></div></div></a></div>
 
             <!--Akhil-->
-          <div class="swiper-slide" style="background-image: url(assets/images/5.jpg);"><div class="number"><div id="K" style="margin-left: 100px;font-size: 28px">Akhil<br><span style="font-size: 11px;margin-left: -30px;font-family: Segoe Script";>Soulfull</span></div></div></div>
+          <div class="swiper-slide" style="background-image: url(assets/images/5.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/akhil.mp4" style="text-decoration: none;color: white"><div id="K" style="margin-left: 100px;font-size: 28px">Akhil<br><span style="font-size: 11px;margin-left: -30px;font-family: Segoe Script";>Soulfull</span></div></div></div>
 
           <!--Amit-->
           <div class="swiper-slide" style="background-image: url(assets/images/amit.jpg);"><div class="number"><a href="https://gigsnap.in/assets/video/amit.mp4" style="text-decoration: none;color: white"><div id="K" style="font-size:20px">AMit<br>Trivedi<br><span style="font-size: 14px;margin-left: 4px;font-family: Segoe Script";>~ SOT</span></div></div></a></div>
@@ -377,24 +377,10 @@
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-    <script>
-        var swiper = new Swiper('.swiper-container', {
-          effect: 'coverflow',
-          grabCursor: true,
-          centeredSlides: true,
-          slidesPerView: 'auto',
-          coverflowEffect: {
-            rotate: 50,
-            stretch: 0,
-            depth: 100,
-            modifier: 1,
-            slideShadows: true,
-          },
-          pagination: {
-            el: '.swiper-pagination',
-          },
-          loop:true,
-        });
-      </script>
+    <script> var swiper = new Swiper('.swiper-container', { effect: 'coverflow',
+    grabCursor: true, centeredSlides: true, slidesPerView: 'auto',
+    coverflowEffect: { rotate: 50, stretch: 0, depth: 100, modifier: 1,
+    slideShadows: true, }, pagination: { el: '.swiper-pagination', }, loop:true,
+    }); </script>
 </body>
 </html>
